fix main button z-index

--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -140,7 +140,7 @@ h2 {
   cursor: pointer;
   margin-top: 20px;
   /* width: 100%; */
-  z-index: 1000;
+  z-index: 999;
 }
 
 @media (max-width: 1000px) {
